@@ -219,6 +219,7 @@ SAMPLE-SOURCES= \
 	samples/contrib/Camels.hs \
 	samples/contrib/PaintDirect.hs \
 	samples/contrib/NotebookRight.hs \
+	samples/contrib/GLCanvas.hs 
 	
 #--------------------------------------------------------------------------
 # The main targets.
