@@ -15,6 +15,8 @@ Backward compatible additions:
 - Added "changes.txt" file :-)
 - Added "HAS_RADIO_MENU_ITEMS" to "isDefined".
 - Added support for radio menu items.
+- New wxHaskell+HOpenGL sample added to the contributions. Thanks
+  to Shelarcy and Sean Seefried.
 
 Bug fixes:
 - Fixed bug that crashed wxHaskell when a tree control had the focus
